# mbdpy

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: autotesting.yaml
docs/: conf.py  index.rst
mbdpy/: blocks.py  frontend.py  gui.py  main.py  model.py
models/: trial_model.json
tests/: requirements.txt  test_model.py
