[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mbdpy"
version = "0.0.1"
authors = [
  { name="Vicarius R&D", email="vicarius.rd@gmail.com" },
]
description = "Model based design framework"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
    "Topic :: Scientific/Engineering",
]

[project.urls]
"Homepage" = "https://github.com/Vicarius-R-D/mbdpy"
"Bug Tracker" = "https://github.com/Vicarius-R-D/mbdpy/issues"